added new report BookedArticlesWithPaymentInfo
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireReportingTrade@13101 18c61ebf-f106-0410-9e1e-81fb82415b8f